add noaa data subset

--- a/2019/GRSM_DataNotebook_2019_DAF.ipynb
+++ b/2019/GRSM_DataNotebook_2019_DAF.ipynb
@@ -21,19 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py:678: UserWarning: Duplicate names specified. This will raise an error in the future.\n",
-      "  return _read(filepath_or_buffer, kwds)\n",
-      "/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (12,13,17,18,32,33) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -236,7 +226,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,10 +234,11 @@
    "source": [
     "# import weather station data\n",
     "\n",
-    "noaa_data = pd.read_csv('222X.DAT', skiprows = 4,  names = pd.read_csv('222X.DAT', nrows = 1, skiprows = 1))\n",
+    "noaa_data = pd.read_csv('222X.DAT', skiprows = 4,  names = pd.read_csv('222X.DAT', nrows = 1, skiprows = 1), low_memory=False)\n",
     "mask = (noaa_data['TIMESTAMP'] > '2019-10-21 12:00') & (noaa_data['TIMESTAMP'] <= '2019-11-17 16:00')\n",
     "noaa_data = noaa_data.loc[mask]\n",
     "noaa_data['TIMESTAMP'] = noaa_data['TIMESTAMP'].apply(datetime.fromisoformat)\n",
+    "noaa_data.to_csv('noaa_data.csv')\n",
     "noaa_data.head()"
    ]
   },
